--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,22 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/backgroundColor"
     tools:context="com.londonappbrewery.iampoor.MainActivity">
+
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="@string/i_am_poor"
+        android:textSize="40sp"
+        android:textColor="@android:color/black"
+        android:textAlignment="center"/>
+
+    <ImageView
+        android:contentDescription="@string/bg_image_desc"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:src="@drawable/coal" />
 
 </RelativeLayout>
